feat: update ride history dialog

--- a/voom-app/app/src/main/res/layout/ride_history_dialog.xml
+++ b/voom-app/app/src/main/res/layout/ride_history_dialog.xml
@@ -238,10 +238,10 @@
             app:cardCornerRadius="32dp"
             app:cardUseCompatPadding="true">
 
-<!--            <org.osmdroid.views.MapView-->
-<!--                android:id="@+id/map"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent" />-->
+            <org.osmdroid.views.MapView
+                android:id="@+id/map"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
         </com.google.android.material.card.MaterialCardView>
 
