--- a/voom-app/app/src/main/res/layout/item_ride_history_card.xml
+++ b/voom-app/app/src/main/res/layout/item_ride_history_card.xml
@@ -18,7 +18,7 @@
         <LinearLayout
             android:id="@+id/headerLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -27,15 +27,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="10:30 AM"
-                android:textSize="14sp"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:layout_marginHorizontal="8dp"
                 android:orientation="horizontal">
 
             </LinearLayout>
@@ -44,10 +44,10 @@
                 android:id="@+id/tvUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Username"
-                android:textSize="14sp"
                 android:paddingHorizontal="16sp"
-                android:textColor="@android:color/black" />
+                android:text="Username"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
 
             <ImageView
                 android:id="@+id/ivDriverIcon"
@@ -300,6 +300,7 @@
                     android:layout_columnWeight="1"
                     android:layout_columnSpan="2"
                     android:gravity="center"
+                    android:orientation="vertical"
                     android:padding="4dp">
 
                     <Button
@@ -308,6 +309,19 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Open route"/>
+
+                    <Button
+                        android:id="@+id/btnOpenRating"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Rate Ride"
+                        android:textColor="@color/primary"
+                        android:textAllCaps="false"
+                        android:textSize="14sp"
+                        android:minHeight="0dp"
+                        android:minWidth="0dp"
+                        android:padding="8dp"/>
 
                 </LinearLayout>
             </GridLayout>
