--- a/voom-fe/src/app/main-shell/user-pages/user-activity/user-activity.html
+++ b/voom-fe/src/app/main-shell/user-pages/user-activity/user-activity.html
@@ -1,8 +1,8 @@
 <div class="px-16 py-4">
   <div class="flex justify-between items-center">
-    <div class="font-medium text-2xl">Activity</div>
+    <div class="font-medium text-3xl">Activity</div>
     <div class="flex items-center space-x-8">
-      <mat-icon class="scale-150 cursor-pointer">filter_list</mat-icon>
+      <app-dropdown [label]="'Sort by'" [options]="values" [selected]="'DATE_DESC'" (selectedChange)="onSortChange($event)" />
       <app-value-input-date label="From" [formControl]="fromDate"></app-value-input-date>
       <app-value-input-date label="To" [formControl]="toDate"></app-value-input-date>
     </div>
