deeplink in nav

--- a/voom-app/app/src/main/res/navigation/user_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/user_nav_graph.xml
@@ -46,7 +46,9 @@
     <fragment
         android:id="@+id/userRideTrackingFragment"
         android:name="inc.visor.voom.app.user.tracking.UserRideTrackingFragment"
-        android:label="UserRideTrackingFragment" />
+        android:label="UserRideTrackingFragment">
+        <deepLink app:uri="voom://ride/tracking" />
+    </fragment>
     <fragment
         android:id="@+id/userHomeFragment"
         android:name="inc.visor.voom.app.user.home.UserHomeFragment"
